# scalable_go

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  basic_moveset.cpp  benchmark_19x19ab_prune.cpp  benchmark_gogamenn.cpp  benchmark_gogamenn19x19.cpp  benchmark_neuralnet.cpp  scalable_go_client.cpp  scalable_go_comparison.cpp  scalable_go_training.cpp  test_neuralnet.cpp  travis.sh
ab_prune/: CMakeLists.txt  ab_prune.cpp  ab_prune.h
goboard/: CMakeLists.txt  goboard.cpp  goboard.h
gogame/: CMakeLists.txt  gogame.cpp  gogame.h  gohelpers.h
gogameab/: CMakeLists.txt  gogameab.cpp  gogameab.h
gogamenn/: CMakeLists.txt  gogamenn.cpp  gogamenn.h
lib/: neuralnet.cpp  neuralnet.h
neuralnet/: CMakeLists.txt  neuralnet.cpp  neuralnet.h
tests/: CMakeLists.txt
tests/ab_prune/: CMakeLists.txt  ab_prune_basic_check.cpp
tests/goboard/: CMakeLists.txt  basic_check.cpp  goboard_basic_check.cpp  goboard_move_check.cpp
tests/gogame/: CMakeLists.txt  gogame_basic_check.cpp  gogame_move_check.cpp  gogame_score_check.cpp
tests/gogameab/: CMakeLists.txt  gogameab_basic_check.cpp
tests/gogamenn/: CMakeLists.txt  gogamenn_basic_check.cpp  gogamenn_scaling_check.cpp
tests/neuralnet/: CMakeLists.txt  basic_check.cpp  neuralnet_basic_check.cpp
